# Flamquency

./: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  types.ts
components/: Arranger.tsx  AudioAnalyzer.tsx  DrumSequencer.tsx  LyricsAndVocals.tsx  MixingChain.tsx  PianoRoll.tsx  Transport.tsx
contexts/: ProjectContext.tsx
docs/: roadmap-native-daw.md
flamquency-native/: CMakeLists.txt
flamquency-native/src/core/: AudioEngine.cpp  AudioEngine.h  GraphProcessor.cpp  GraphProcessor.h  Metronome.cpp  Metronome.h  Transport.cpp  Transport.h
flamquency-native/src/ipc/: WebSocketServer.cpp  WebSocketServer.h
flamquency-native/src/mixer/: AutomationManager.cpp  AutomationManager.h  OfflineRenderer.cpp  OfflineRenderer.h  TrackManager.cpp  TrackManager.h
flamquency-native/src/plugin/: PluginHost.cpp  PluginHost.h  PresetManager.cpp  PresetManager.h
flamquency-native/src/processors/: TrackProcessor.cpp  TrackProcessor.h
flamquency-native/src/utils/: LockFreeQueue.h
flamquency-native/tests/: AudioEngineTest.cpp
services/: audioEngine.ts  geminiService.ts  nativeBridge.ts  storageService.ts
